Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Description
This issue was created by maloo for James Simmons <uja.ornl@gmail.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/09916d1f-07c5-41ca-b70e-8585e94198a6
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/102871 - 4.18.0-477.27.1.el8_8.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/102871 - 4.18.0-477.27.1.el8_lustre.x86_64
Several test are failing with
Lustre: DEBUG MARKER: == sanity test 350: force NID mismatch path to be exercised === 22:25:44 (1713047144) LustreError: 1182847:0:(statahead.c:2175:start_statahead_thread()) can't start ll_sa thread, rc: -4 BUG: unable to handle kernel paging request at ffffffffbb3e5f40 Oops: 0002 [#1] SMP PTI CPU: 0 PID: 1182864 Comm: rm 4.18.0-513.18.1.el8_9.x86_64 #1 RIP: 0010:__pv_queued_spin_lock_slowpath+0x19e/0x2a0 Call Trace: _raw_spin_lock+0x1e/0x30 revalidate_statahead_dentry+0x11f/0xca0 [lustre] ll_revalidate_statahead+0x75/0x2a0 [lustre] ll_revalidate_dentry+0xda/0x210 [lustre] lookup_dcache+0x3f/0x60 __lookup_hash+0x1f/0xa0 do_unlinkat+0x156/0x300 do_syscall_64+0x5b/0x1b0